--- a/env.example
+++ b/env.example
@@ -4,6 +4,8 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database_name?re
 # Next.js
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-secret-key-here
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin123
 
 # Site Configuration
 SITE_URL=http://localhost:3000
