--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
