Update MongoDB URI in production
Updated MongoDB connection string with production credentials.

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,7 +1,8 @@
 # Copy this file to `.env.production` on the VPS server (DO NOT COMMIT REAL SECRETS)
 
 # MongoDB Atlas connection string (use a dedicated prod user; rotate password)
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster-url>/<db>?retryWrites=true&w=majority&appName=<appName>
+MONGODB_URI=mongodb+srv://fast0005:fast123@cluster0.arwopde.mongodb.net/mydb?retryWrites=true&w=majority&appName=Cluster0
+
 
 # NextAuth
 NEXTAUTH_URL=https://amirtraders.tech
