Snapshot before upload: prepare project for GitHub

--- a/env.example
+++ b/env.example
@@ -11,6 +11,10 @@ ADMIN_PASSWORD=admin123
 SITE_URL=http://localhost:3000
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
+# Dev-only seeding/login shortcuts (DO NOT USE IN PRODUCTION)
+ADMIN_EMAIL=amirtraders@gmail.com
+ADMIN_PASSWORD=amirtraders1234@*
+
 # Optional: Analytics
 NEXT_PUBLIC_GA_ID=your-google-analytics-id
 
